chore: pre-production hardening — externalize secrets, fix path bug, add Actuator
- JwtService: remove hardcoded SECRET/EXPIRATION_MS constants; inject via
  @Value('\') and @Value('\')
- application.yml: add jwt.secret / jwt.expiration-ms blocks (env-var backed
  with local-dev defaults); add app.cors.allowed-origins block
- GoogleSheetsConfig: replace hardcoded ClassPathResource with
  @Value('\') Resource so classpath: and
  file: prefixes both work transparently (prod can mount secret file)
- SecurityConfig: externalize CORS allowed origins to app.cors.allowed-origins;
  supports comma-separated list for multi-origin prod config
- ImageService: fix path construction from string concat to Path.resolve()
  to avoid broken paths when STORAGE_IMAGES_PATH has no trailing slash
- pom.xml: add spring-boot-starter-actuator; exposes /actuator/health for
  Docker Compose healthchecks
- Document/Pre-production-readiness.md: add full readiness report with
  findings, decisions needed (SQL logging, remaining hardcoded YAML values)